potentially fixed whitespace issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,19 +8,25 @@
     --shadow: #181818;
     --shadow2: #90908d;  }
 
-    html, body {
+    /* html, body {
       overflow-y: auto;
       margin: 0;
       padding: 0; 
-  }
+  } */
+
+html {
+  height: 100%;
+
+}
 
   body {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
     margin: 0;
     background-image: linear-gradient(to bottom, var(--light), var(--shadow2));
-    max-width: 100vw;
+    min-width: 100vw;
     overflow-x: hidden;
+    min-height: 100%;
   }
 
   .col-style1 {
